Scrollbar fix

--- a/src/Search/styles.scss
+++ b/src/Search/styles.scss
@@ -349,6 +349,9 @@
             }
         }
     }
+    &:-webkit-scrollbar {
+        width: 0;
+    }
     -ms-overflow-style: none;
     overflow: -moz-scrollbars-none;
 }
